[package]
name = "consensus"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.41", features = ["sync"] }
log = "0.4.22"

crypto = { path = "../crypto" }
config = { path = "../config" }
primary = { path = "../primary" }

[dev-dependencies]
rand = "0.8.5"

[features]
benchmark = []
