[package]
name = "network"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.41", features = ["rt", "net", "sync", "macros", "time"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
thiserror = "2.0.3"
bytes = "1.0.1"
log = "0.4.14"
futures = "0.3.14"
rand = { version = "0.8.5", features = ["small_rng"] }
async-trait = "0.1.50"

[dev-dependencies]
bincode = "1.3.3"